# ChangeLog for app-admin/eselect-mesa
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-mesa/ChangeLog,v 1.28 2011/08/17 16:40:51 chithanh Exp $

  17 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  eselect-mesa-0.0.10.ebuild:
  keyword ~sparc-solaris

  15 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  eselect-mesa-0.0.10.ebuild:
  ppc64 stable wrt #363965

  28 Jun 2011; Brent Baude <ranger@gentoo.org> eselect-mesa-0.0.10.ebuild:
  Marking eselect-mesa-0.0.10 ppc stable for bug 363965

  27 May 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  eselect-mesa-0.0.9.ebuild, eselect-mesa-0.0.10.ebuild:
  depend on bash-4, bug #368829.

  15 May 2011; Raúl Porcel <armin76@gentoo.org> eselect-mesa-0.0.10.ebuild:
  alpha/ia64/sh/sparc stable wrt #363965

  13 May 2011; Jeroen Roovers <jer@gentoo.org> eselect-mesa-0.0.10.ebuild:
  Stable for HPPA (bug #363965).

  13 May 2011; Markus Meier <maekke@gentoo.org> eselect-mesa-0.0.10.ebuild:
  arm stable, bug #363965

  09 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  eselect-mesa-0.0.10.ebuild:
  x86 stable wrt bug #363965

  28 Apr 2011; Markos Chandras <hwoarang@gentoo.org>
  eselect-mesa-0.0.10.ebuild:
  Stable on amd64 wrt bug #363965

  18 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -eselect-mesa-0.0.8.ebuild:
  old

  16 Apr 2011; Raúl Porcel <armin76@gentoo.org> eselect-mesa-0.0.9.ebuild:
  alpha/ia64/sh/sparc stable wrt #359059

*eselect-mesa-0.0.10 (09 Apr 2011)

  09 Apr 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +eselect-mesa-0.0.10.ebuild:
  Version bump, fixes bug #362747

  08 Apr 2011; Markus Meier <maekke@gentoo.org> eselect-mesa-0.0.9.ebuild:
  arm stable, bug #359059

  04 Apr 2011; Jeroen Roovers <jer@gentoo.org> eselect-mesa-0.0.9.ebuild:
  Stable for HPPA (bug #359059).

  26 Mar 2011; Christian Faulhammer <fauli@gentoo.org>
  eselect-mesa-0.0.9.ebuild:
  x86 stable, bug 359059
