@@ -1,6 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
+DIST eselect-mesa-0.0.10-multilib-binki.patch 5504 RMD160 9c5ce57e72445d9121841bd72fc247fb694ca64e SHA1 7c9901eb65176704113d2fe918261f3f3f6c4290 SHA256 35a6242818f424ad79aaa047456eb130c74553d7856a92e19ca6cadd7515ed0c
 DIST eselect-mesa-0.0.10.tar.gz 2214 RMD160 19f15bd82f8b276c6453e5ae8fb586d76dde7103 SHA1 6784238326ff267926d38f5f5d22074db5624d03 SHA256 736c4360902ddf78d02c6153e558164f3e09cfe74953ae15b74c6ca1647aca7c
-DIST eselect-mesa-0.0.9.tar.gz 2217 RMD160 3c9cf52763860829e744f1a58bcda55f9a8ef3fa SHA1 30f757222bcb50a9e3b30f10f594a53934157db0 SHA256 27adf2beff6f7cbd54004e4c27f9ac869e8c7bc72cb83c32acfbccf4119b2494
-EBUILD eselect-mesa-0.0.10.ebuild 865 RMD160 6584d384517e6f85bd3245d8d9444c50e272245c SHA1 d19db506a0eb833eca9bf76d218fd2b071c4b5ad SHA256 544d03fb408f99387377b0ef7118d0c5f2fc4251772ef22a79a9262f9eb74fca
-EBUILD eselect-mesa-0.0.9.ebuild 848 RMD160 af88a9d4ea79df0bc3061829710ccd6b0e18c9a9 SHA1 e2625c4d2c18824401567b66ec1792cdf550ad1f SHA256 be3b4f961a6a2c6e983e481d7939a79749dcc4dee55895a0f0db80154174f924
-MISC ChangeLog 3621 RMD160 b42301382696d9f788c9dbcd52ead800ec7d3ff8 SHA1 bc5ef55adaac6f53209067da6dd85cc8438b3c8b SHA256 572dad5b9e87e79c77b2e24b22de3229aaa115bace882a0ffa55e62a9dacac5d
+EBUILD eselect-mesa-0.0.10.ebuild 1079 RMD160 6ad6693fed930ef3683f45bbc6af86241a552405 SHA1 46c67c07f94d129fcf25c35e57237be4bddddbb0 SHA256 ce9b3d7ea95bafb45fda92784c072c717507e1ca5329b18aece78622f3f7e765
+MISC ChangeLog 3871 RMD160 33a3f2f72701fd56c48c5eaed3ae0fc442d5926a SHA1 91a5f8b5b6e3937f016bffae870c5adb2f128b88 SHA256 329feabb131b130dc5ba43ec17f16416fbdca86c72cc58c316554cb18d1e3329
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iQIcBAEBCgAGBQJPZp1cAAoJEHQ6UuhrqBBQvjIQALa4HfnWLv4E+PgNVibGv8Tz
+bEo6hE2nfn2Kr0Rz5VYidq0cSH1cZwZelg02h/q3H1eywVMRNynuqEbX7crL5H9z
+SpSi8NpY39pSdO6WbTFIijRknDebTyPvnhFBm/KMP3NE6A70DynOK1TtYwwNu/bI
+cE2F9Lv73KhAd4Yat/u/oUTbL/+/B7p+dj07WLXjEO5Q4bfZWnEbm9JlMvRcm5tv
+Es3FzJ9fZw6qRyYUQXY+jREkb9PsQ4DgdpCqdY28QaagKfOD1+B0yM/A1N2Rqbtg
+c1J+o+yt+CCin4oljQDiiVMZ10JpEMBzsnV2MRWZzL6vFoX5wT9OwzlRwGaxI0vy
+KZoR2SQ17287wtd0G3GX3c0qVyFbi7Hmhg5+GOJ/bvi660YxAYRTnvMoK6atjR2E
+eZNbVdombvhuzQDcNAcmFejYj1dPtwPttqABh/NYQSSu5PZPBL3DJLda58clKeVy
+5t774sOM+s2AfNBd9kO95Fkmlww7sTHCUq4OYOjvym2atAViPu+jl6UfE2C4tAsb
+ceR4e8+fQoKT21bGzi3QsjHJgBzg411prdXAMeTrpF//nRD6mnelSBrlI2iDE0qv
+TUKD9oRLJn1c42q02SyDqFlrX5fpna4ccJQv5IKN3D02TFFyVJaukL9bI3/PjE1R
+2m6jrYbiO1GZWIBOZ3So
+=17wU
+-----END PGP SIGNATURE-----
