@@ -1,13 +1,16 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-mesa/eselect-mesa-0.0.10.ebuild,v 1.10 2011/08/17 16:40:51 chithanh Exp $
 
 EAPI=3
 
+inherit eutils
+
 DESCRIPTION="Utility to change the Mesa OpenGL driver being used"
 HOMEPAGE="http://www.gentoo.org/"
 
-SRC_URI="mirror://gentoo/${P}.tar.gz"
+SRC_URI="mirror://gentoo/${P}.tar.gz
+	http://dev.gentoo.org/~binki/distfiles/${CATEGORY}/${PN}/${P}-multilib-binki.patch"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -17,6 +20,11 @@ IUSE=""
 DEPEND=""
 RDEPEND=">=app-admin/eselect-1.2.4
 	>=app-shells/bash-4"
+
+src_prepare() {
+	# Support multilib-nosymlink and arbitrary ABIs
+	epatch "${DISTDIR}"/${P}-multilib-binki.patc
+}
 
 src_install() {
 	insinto /usr/share/eselect/modules
