@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/eselect-mesa
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-mesa/ChangeLog,v 1.28 2011/08/17 16:40:51 chithanh Exp $
+
+  19 Mar 2012; Nathan Phillip Brink <binki@gentoo.org>
+  -eselect-mesa-0.0.9.ebuild, eselect-mesa-0.0.10.ebuild:
+  Patch eselect-mesa-0.0.10 in my way so as to support multilib-nosymlink and
+  arbitrary ABIs instead of only /usr/lib and /usr/lib64.
 
   17 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   eselect-mesa-0.0.10.ebuild:
